...
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/clear_filters" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvEvents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="88dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/item_event" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvReservations"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="88dp"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
...
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        app:itemIconTint="@color/purple_700"
        app:itemTextColor="@color/purple_700"
...
